# feedboard

./: README.md  pyproject.toml
src/feedboard/: __init__.py  feed.py  html.py  main.py
tests/: test_feed.py
tests/data/feeds/: ploum.xml  pocoo.xml  rgaz.xml
