[project]
name = "feedboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rga", email = "contact@rgaz.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.11",
]

[project.scripts]
feedboard = "feedboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
