[project]
name = "feedboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rga", email = "contact@rgaz.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.11",
    "jinja2>=3.1.6",
]

[project.scripts]
feedboard = "feedboard.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
