[project]
name = "feedboard"
version = "0.2.0"
description = "A simple RSS feed aggregator."
readme = "README.md"
authors = [
    { name = "rga", email = "contact@rgaz.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.11",
    "jinja2>=3.1.6",
]

[project.scripts]
feedboard = "feedboard.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
